# esp32-project-with-rust-component

./: CMakeLists.txt  README.md
components/example_rust/: Cargo.toml  generate-binding.sh
components/example_rust/src/: lib.rs
main/: CMakeLists.txt  esp32-project-with-rust-component.c
